--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,84 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+html{
+  font-size: 62.5%;
+}
+body{
+  background-color: rgb(219, 230, 253);
+}
+h1{
+  font-size: 3.2rem;
+  margin: 2rem 0;
   text-align: center;
 }
+h2{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 2.4rem;
+}
+p{
+  margin: 2rem 0;
+  color: rgb(21, 19, 60 ,0.5);
+  font-weight: 400;
+  font-size: 1.6rem;
+  display: inline-block;
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+span{
+  text-transform: capitalize;
+  font-weight: bold;
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
+.stories-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 4rem;
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
 }
 
-.card {
-  padding: 2em;
+.card{
+  min-width: 20rem;
+  width: 40vw;
+  padding: 4rem;
+  background-color: #ffffff;
+  box-shadow: rgba(100,100,111,0.2) 0px 7px 29px 0px;
+  border-radius: 0.5rem;
+  color: #15133c;
+}
+.card-button{
+  flex-direction: row;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.card-button a{
+  color: #92b4ec;
+  font-weight: 400;
+  font-size: 1.6rem;
+
 }
 
-.read-the-docs {
-  color: #888;
+.card-button a:last-child{
+  color: red;
 }
+
+form{
+  display: grid;
+  place-items: center;
+}
+
+.input{
+  padding: 1rem;
+  min-width: 40rem;
+  font-size: 2rem;
+  text-transform: capitalize;
+  border: none;
+  border-bottom: 0.2rem solid#15133c;
+  outline: none;
+}
+
