--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,11 @@ button {
     min-width: 45rem;
     padding: 2.5rem;
   }
-
+  .grid {
+  
+    display: flex;
+    flex-direction: column;
+}
 }
 
 @media(max-width:768px){
@@ -131,5 +135,10 @@ button {
     min-width: 35rem;
     padding: 2rem;
   }
+  .grid {
+  
+    display: flex;
+    flex-direction: column;
+}
 
 }
